task-06/iris-app/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-app-service
  labels:
    site: iris
  #annotations:
    #alb.ingress.kubernetes.io/healthcheck-path: '/login'
spec:
  selector:
    app: iris-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
