task-06/iris-app/ingress.yaml
apiVersion: networking.k8s.io/v1 #extensions/v1beta1
kind: Ingress
metadata:
  name: "iris-ingress"
  # annotations:
  #   alb.ingress.kubernetes.io/scheme: 'internet-facing'
  #   alb.ingress.kubernetes.io/target-type: 'ip'
  #   alb.ingress.kubernetes.io/group.name: 'iris-alb-group'
  #   alb.ingress.kubernetes.io/load-balancer-name: 'iris-alb'
  #   alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
  #   alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-east-1:650601597349:certificate/4915ba65-ec07-44c7-8f42-897cfe1574bb'
  #   alb.ingress.kubernetes.io/ssl-policy: 'ELBSecurityPolicy-TLS13-1-2-2021-06'
  #   alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: 'iris'
spec:
  ingressClassName: 'nginx'
  rules:
  - host: 'iris.mohamedhassan.com'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: "iris-app-service"
            port: 
              number: 80
